Prevent UnsupportedOperationException on some openjdks